# AiFintechProjectBackend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  structura.txt
alembic/: env.py
alembic/versions/: 13f388a64569_create_tables.py  7c2f4d9a6b11_add_demand_forecasting_tables.py  b3a9d2c4e8f0_add_forecast_external_factor_columns.py  d1f6a2b9c3e4_add_viability_check_tables.py  e2c7a8b9d1f0_add_churn_prediction_tables.py
docs/: problem.txt
scripts/: seed_db.py
src/app/: config.py  main.py
src/app/agent/: churn_prediction.py  demand_forecasting.py  orchestrator.py  viability_check.py
src/app/agent/prompts/: system.py
src/app/algorithms/: churn_prediction.py  demand_forecasting.py  market_sizing.py  viability_check.py
src/app/api/: deps.py
src/app/api/routes/: __init__.py  churn_prediction.py  data.py  demand_forecasting.py  market_sizing.py  viability_check.py
src/app/db/: connection.py
src/app/db/models/: __init__.py  business.py  churn.py  customer.py  financial.py  forecast.py  location.py  market.py  transaction.py
src/app/db/repositories/: churn_repo.py  data_repo.py  financial_repo.py  forecast_repo.py  market_repo.py
src/app/mcp/tools/: forecast.py  (+1 more)
src/app/schemas/: data.py  request.py  response.py
tests/: conftest.py  factories.py
tests/integration/: test_data_routes.py
tests/unit/algorithms/: test_churn_prediction.py  test_demand_forecasting.py  test_market_sizing.py  test_viability_check.py
tests/unit/data/: test_data_repo.py  test_helpers.py
